welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:36: error: illegal start of simple pattern
	for(<- 1 to 4){recule}
            ^FlowerPot:40: error: '<-' expected but '}' found.
}
^